fix API doc
